[CSS Shapes] shape-inside rectangle layout can fail https://bugs.webkit.org/show_bug.cgi?id=124784

Reviewed by Andreas Kling.

Source/WebCore:

Apply LayoutUnit::fromFloatCeil() consistently in RectangleShape::firstIncludedIntervalLogicalTop().

Test: fast/shapes/shape-inside/shape-inside-subpixel-rectangle-top.html

* rendering/shapes/RectangleShape.cpp:
(WebCore::RectangleShape::firstIncludedIntervalLogicalTop):

LayoutTests:

Regression test.

* fast/shapes/shape-inside/shape-inside-subpixel-rectangle-top-expected.html: Added.
* fast/shapes/shape-inside/shape-inside-subpixel-rectangle-top.html: Added.


Canonical link: https://commits.webkit.org/143072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159821 268f45cc-cd09-0410-ab3c-d52691b4dbfc